--- a/_config.yml
+++ b/_config.yml
@@ -26,9 +26,11 @@ url: https://chongminglim.github.io # the base hostname & protocol for your site
 logo: /assets/img/cmlim.jpeg
 description: >
   <br>
-  I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/philosophy" data-type="link" data-id="https://www.sheffield.ac.uk/philosophy" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
+  I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/philosophy" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh/research/philosophy" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
   <br><br>
   Prior to this, I was a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
+  <br><br>
+  My research interests are in moral and political philosophy. I am currently working on several papers about political resistance and public commemoration. 
   <br><br>
   You can email me at cm.lim[at]ntu.edu.sg.
   <br><br>
