--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 logo: /assets/img/cmlim.jpeg
 description: >
   <br>
-  I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/philosophy" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh/research/philosophy" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
+  I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
   <br><br>
   Prior to this, I was a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
   <br><br>
