--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ description: >
   <br><br>
   My research interests are in moral and political philosophy. I am currently working on several papers about political resistance and public commemoration. 
   <br><br>
-  You can email me at cm.lim[at]ntu.edu.sg.
+  You can email me at cm.lim[at]ntu.edu.sg or cm.lim[at]sheffield.ac.uk.
   <br><br>
   <a href="https://scholar.google.co.uk/citations?hl=en&user=PG1IJTEAAAAJ"><img src="/assets/img/GoogleScholar.png" alt="Google Scholar" style="width:32px;height:32px;"></a> &nbsp; 
   <a href="https://philpeople.org/profiles/chong-ming-lim"><img src="/assets/img/PhilPapers.png" alt="PhilPapers" style="width:32px;height:32px;"></a> &nbsp;
