--- a/_config.yml
+++ b/_config.yml
@@ -28,9 +28,9 @@ description: >
   <br><br>
   Prior to this, I was a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
   <br><br>
-  My research interests are in moral and political philosophy. I am currently working on several papers about political resistance and public commemoration. 
+  My research interests are in moral and political philosophy. I am currently thinking about political resistance and public commemoration. 
   <br><br>
-  You can email me at cm.lim[at]ntu.edu.sg or cm.lim[at]sheffield.ac.uk.
+  You can email me at cm.lim[at]sheffield.ac.uk.
   <br><br>
   <a href="https://scholar.google.co.uk/citations?hl=en&user=PG1IJTEAAAAJ"><img src="/assets/img/GoogleScholar.png" alt="Google Scholar" style="width:32px;height:32px;"></a> &nbsp; 
   <a href="https://philpeople.org/profiles/chong-ming-lim"><img src="/assets/img/PhilPapers.png" alt="PhilPapers" style="width:32px;height:32px;"></a> &nbsp;
