--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Chong-Ming Lim
 logo: /assets/img/cmlim.jpeg
-description:
+description: >
   <br>
   I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
   <br><br>
