--- a/_config.yml
+++ b/_config.yml
@@ -22,13 +22,14 @@ title: Chong-Ming Lim
 logo: /assets/img/cmlim.jpeg
 description: >
   <br>
-  I am an Assistant Professor of Philosophy at <a rel="noreferrer noopener" href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank">Nanyang Technological University</a>. From AY2025, I will be a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
+  I am a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
   <br><br>
-  Prior to this, I was a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
+  I was previously an Assistant Professor at <a href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank" rel="noreferrer noopener">Nanyang Technological University, Singapore</a>, and a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
   <br><br>
   My research interests are in moral and political philosophy. I am currently thinking about political resistance and public commemoration. 
   <br><br>
-  You can email me at cm.lim[at]sheffield.ac.uk.
+  I am the Book Reviews Editor for the <i>Journal of Applied Philosophy</i>, and an Associate Editor for <i>Analysis Reviews</i>. I commission extended reviews for new books. Please <a href="https://forms.gle/uexTsRJkp1QFPs756" target="_blank" rel="noopener">click here</a> if you would like to pitch a book review. 
+  📧Email: cm.lim[at]sheffield.ac.uk.
   <br><br>
   <a href="https://scholar.google.co.uk/citations?hl=en&user=PG1IJTEAAAAJ"><img src="/assets/img/GoogleScholar.png" alt="Google Scholar" style="width:32px;height:32px;"></a> &nbsp; 
   <a href="https://philpeople.org/profiles/chong-ming-lim"><img src="/assets/img/PhilPapers.png" alt="PhilPapers" style="width:32px;height:32px;"></a> &nbsp;
