--- a/_config.yml
+++ b/_config.yml
@@ -22,19 +22,18 @@ title: Chong-Ming Lim
 logo: /assets/img/cmlim.jpeg
 description: >
   <br>
-  I am a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" data-type="link" data-id="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
+  I am a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
   <br><br>
-  I was previously an Assistant Professor at <a href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" data-id="https://www.ntu.edu.sg/soh/about-us/philosophy" target="_blank" rel="noreferrer noopener">Nanyang Technological University, Singapore</a>, and a Postdoctoral Fellow at the <a href="https://ethicsinsociety.stanford.edu/" data-type="link" data-id="https://ethicsinsociety.stanford.edu/" target="_blank" rel="noreferrer noopener">McCoy Family Center for Ethics in Society, Stanford University</a>. I completed my DPhil in Philosophy at the <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">University of Oxford</a>.
+  I was previously an Assistant Professor in <a href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" target="_blank" rel="noreferrer noopener">Singapore</a>, and a Postdoctoral Fellow at <a href="https://ethicsinsociety.stanford.edu/" data-type="link" target="_blank" rel="noreferrer noopener">Stanford</a>. I completed my DPhil in Philosophy at <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">Oxford</a>.
   <br><br>
   My research interests are in moral and political philosophy. I am currently thinking about political resistance and public commemoration. 
   <br><br>
-  I am the Book Reviews Editor for the <i>Journal of Applied Philosophy</i>, and an Associate Editor for <i>Analysis Reviews</i>. I commission extended reviews for new books. Please <a href="https://forms.gle/uexTsRJkp1QFPs756" target="_blank" rel="noopener">click here</a> if you would like to pitch a book review. 
+  I am the Book Reviews Editor for the <a href="https://onlinelibrary.wiley.com/page/journal/14685930/homepage/book-reviews" target="_blank" rel="noopener noreferrer">Journal of Applied Philosophy</a>, and an Associate Editor for <a href="https://academic.oup.com/analysis/pages/reviews_guidelines" target="_blank" rel="noopener noreferrer">Analysis Reviews</a>.
   <br><br>
-  📧Email: cm.lim[at]sheffield.ac.uk.
+  📧 Email: cm.lim[at]sheffield.ac.uk.
   <br><br>
   <a href="https://scholar.google.co.uk/citations?hl=en&user=PG1IJTEAAAAJ"><img src="/assets/img/GoogleScholar.png" alt="Google Scholar" style="width:32px;height:32px;"></a> &nbsp; 
   <a href="https://philpeople.org/profiles/chong-ming-lim"><img src="/assets/img/PhilPapers.png" alt="PhilPapers" style="width:32px;height:32px;"></a> &nbsp;
-  <a href="https://nanyang.academia.edu/ChongMingLim"><img src="/assets/img/Academia.png" alt="Academia.edu" style="width:32px;height:32px;"></a> &nbsp;
   <a href="https://bsky.app/profile/chongminglim.bsky.social"><img src="/assets/img/Bluesky.png" alt="Bluesky" style="width:32px;height:32px;"></a> &nbsp;
 
 # Build settings
