--- a/_config.yml
+++ b/_config.yml
@@ -22,11 +22,7 @@ title: Chong-Ming Lim
 logo: /assets/img/cmlim.jpeg
 description: >
   <br>
-  I am a Lecturer in Political Philosophy at the <a href="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>.
-  <br><br>
-  I was previously an Assistant Professor in <a href="https://www.ntu.edu.sg/soh/about-us/philosophy" data-type="link" target="_blank" rel="noreferrer noopener">Singapore</a>, and a Postdoctoral Fellow at <a href="https://ethicsinsociety.stanford.edu/" data-type="link" target="_blank" rel="noreferrer noopener">Stanford</a>. I completed my DPhil in Philosophy at <a href="https://www.philosophy.ox.ac.uk/" data-type="link" data-id="https://www.philosophy.ox.ac.uk/" target="_blank" rel="noreferrer noopener">Oxford</a>.
-  <br><br>
-  My research interests are in moral and political philosophy. I am currently thinking about political resistance and public commemoration. 
+  I am a philosopher at the <a href="https://www.sheffield.ac.uk/hpdh" target="_blank" rel="noreferrer noopener">University of Sheffield</a>. My research interests are in moral and political philosophy. I am currently thinking about political resistance and public commemoration. 
   <br><br>
   I am the Book Reviews Editor for the <a href="https://onlinelibrary.wiley.com/page/journal/14685930/homepage/book-reviews" target="_blank" rel="noopener noreferrer">Journal of Applied Philosophy</a>, and an Associate Editor for <a href="https://academic.oup.com/analysis/pages/reviews_guidelines" target="_blank" rel="noopener noreferrer">Analysis Reviews</a>.
   <br><br>
